# VoiceAnalizer

./: .gitignore  docker-compose.yml
src/: Dockerfile.prod  bot.py  config.py  google_interaction.py  main.py  pyproject.toml  utils.py
